white gap fix attemot no 15

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body, html{
     flex-direction: column;
     margin: 0;
     padding: 0;
+    min-height: -webkit-fill-available;
     background: linear-gradient(to bottom, #eaf2ff,#ffffff,#1a3a6f);
     background-repeat: no-repeat;
     background-position: center;
